tests/testfiles/passing/invalid_identifiers/keyword_as_id_default.c
/* Keyword as identifier: default */
int main() {
    int default;
}